# LangchainRetriever

./: pyproject.toml
credal_retriever/: CredalRetriever.py
