[tool.poetry]
name = "credalretriever"
version = "0.1.0"
description = "Access permissioned, audit logged enterprise data in Credal"
authors = ["Jack Fischer <jack@credal.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
